@@ -281,13 +281,17 @@ namespace scene
 		//! creates a fly circle animator
 		/** Lets the attached scene node fly around a center.
 		\param center Center relative to node origin
-		\param speed rotation speed
-		\return Animator. Attach it to a scene node with ISceneNode::addAnimator()
-		and the animator will animate it. */
+		 \param speed: The orbital speed, in radians per millisecond.
+		 \param direction: Specifies the upvector used for alignment of the mesh.
+		 \param startPosition: The position on the circle where the animator will
+			begin. Value is in multiples  of a circle, i.e. 0.5 is half way around.
+		 \return The animator. Attach it to a scene node with ISceneNode::addAnimator()
+		 */
 		virtual ISceneNodeAnimator* createFlyCircleAnimator(
 				const core::vector3df& center=core::vector3df(0.f, 0.f, 0.f),
 				f32 radius=100.f, f32 speed=0.001f,
-				const core::vector3df& direction=core::vector3df(0.f, 1.f, 0.f));
+				const core::vector3df& direction=core::vector3df(0.f, 1.f, 0.f),
+				f32 startPosition = 0.f);
 
 		//! Creates a fly straight animator, which lets the attached scene node
 		//! fly or move along a line between two points.
